Bending Machine 과제

--- a/과제/Bending Machine/index.html
+++ b/과제/Bending Machine/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <title>음료 자판기</title>
     <link rel="stylesheet" href="Bending_machine.css">
 </head>
+
 <body>
     <header class="logo_box">
-        <img class="logo" src="/images/logo.png" alt="코카콜라 영어로고">
+        <img class="logo" src="images/logo.png" alt="코카콜라 영어로고">
     </header>
 
     <main>
@@ -53,7 +55,7 @@
             </div>
             <div class="return_money">거스름돈 반환</div>
             <form class="input_money">
-                <input type="text" name="" id="" placeholder="입금액 입력" >
+                <input type="text" name="" id="" placeholder="입금액 입력">
                 <button type="submit">입금</button>
             </form>
 
@@ -113,4 +115,5 @@
         </section>
     </main>
 </body>
+
 </html>
