16일차 수업내용 업로드

--- a/수업내용/Day4/006_form의_종류.html
+++ b/수업내용/Day4/006_form의_종류.html
@@ -7,7 +7,7 @@
     <title>form</title>
 </head>
 <body>
-    <form action="./015_form의_종류.html" method="get">
+    <form action="006_form의_종류.html" method="get">
         <input type="text" name="userId"><br>
         <input type="password" name="userPw"><br>
         <input type="checkbox" name="" id=""><br>
