--- a/수업내용/Day12/login (재현님)/login.html
+++ b/수업내용/Day12/login (재현님)/login.html
@@ -104,16 +104,16 @@
         <h2 class="blind">위니브 로그인</h2>
         <p class="txt-login">더 편리해진 위니브에 오신 것을 환영합니다.</p>
         <a href="#none" class="link-login">
-            <img src="img-login/weniv-logo.png" alt="weniv" class="img-logo">
+            <img src="images/weniv-logo.png" alt="weniv" class="img-logo">
             로그인
         </a>
         <div class="cont-find">
-            <img src="img-login/icon-lock.png" alt="" class="img-find">
+            <img src="images/icon-lock.png" alt="" class="img-find">
             <a href="#none" class="link-id">아이디</a>
             <a href="#none" class="link-pw">비밀번호찾기</a>
         </div>
         <div class="cont-join">
-            <img src="img-login/icon-user.png" alt="" class="img-join">
+            <img src="images/icon-user.png" alt="" class="img-join">
             <a href="#none" class="link-join">회원가입</a>
         </div>
     </article>
