--- a/과제/dropdown-selectbox/index.html
+++ b/과제/dropdown-selectbox/index.html
@@ -9,18 +9,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="cont-dropdown_selectbox">
+    <article class="cont-dropdown_selectbox">
 
-        <button class="button-dropdown"type="button">최애 프로그래밍 언어</button>
+        <button class="button-dropdown txt-ellipsis" type="button">최애 프로그래밍 언어</button>
         
         <ul class="list-selectbox">
-            <li><button type="button">Python</button></li>
-            <li><button type="button">Java</button></li>
-            <li><button type="button">JavaScript</button></li>
-            <li><button type="button">C</button></li>
-            <li><button type="button">C/C++</button></li>
+            <li><button class="txt-ellipsis" type="button">Python</button></li>
+            <li><button class="txt-ellipsis" type="button">Java</button></li>
+            <li><button class="txt-ellipsis" type="button">JavaScript</button></li>
+            <li><button class="txt-ellipsis" type="button">C</button></li>
+            <li><button class="txt-ellipsis" type="button">C/C++</button></li>
         </ul>
-    </div>
+    </article>
 
     <script>
         const button = document.querySelector('.button-dropdown');
