변경 사항 수정

--- a/과제/calendar/calendar.html
+++ b/과제/calendar/calendar.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="calendar.css">
     <title>calendar</title>
 </head>
 <body>
     <table>
-        <caption class="year">
-            <p class="year-text">2022</p>
+        <caption class="year clear-fix">
+            <h1 class="year-text">2022</h1>
             <p class="text">
                 Act as if it were impossible to fail<Br>
                 실패가 불가능한 것처럼 행동하라.
@@ -205,7 +206,7 @@
                             <td>5</td>
                         </tr>
                         <tr>
-                            <tdclass="SUN"></td>
+                            <td class="SUN">6</td>
                             <td>7</td>
                             <td>8</td>
                             <td>9</td>
