25일차 수업내용 수정 및 추가

--- a/수업내용/Day25/014_boolean.html
+++ b/수업내용/Day25/014_boolean.html
@@ -23,10 +23,15 @@
     console.log(value1 == value2); //형변환이 필요함
     console.log(value1 === value2); //형변환 필요없음. 속도 더 빠름. 실무에서 더 많이 사용. 
     console.log('------------------')
+
     console.log(value1 != value2);
     console.log(value1 !== value2);
+    console.log('------------------')
+
+    value1 = true;
+    value2 = false;
     console.log(!value2);
-    console.log(!!value2);
+    console.log(!!value2);// 강조!! 정말 많이 사용합니다.
   </script>
 </body>
 </html>
