--- a/수업내용/Day25/017_object.html
+++ b/수업내용/Day25/017_object.html
@@ -44,6 +44,9 @@
 
     document.write('<br><hr><br>');
 
+    // 문제
+    // 1번 : 저에게 3번째 직장이 생겼습니다. 직장이름은 위니브입니다. 데이터를 넣어주시고 아래와 같이 출력되게 해주세요.
+    // 출력결과 : 제 세번째 직장은 위니브 입니다.
     person.이력.세번째직장 = '위니브';
     // person.이력 = {'세번째직장' : '위니브'};
     document.write(`제 이력은 ${person.이력.첫번째직장} 입니다. <br>`);
