--- a/수업내용/Day22/JavaScript/004_주석.html
+++ b/수업내용/Day22/JavaScript/004_주석.html
@@ -7,8 +7,20 @@
     <title>hello javascript</title>
 </head>
 <body>
-    <p id="one"></p>
-    <button onclick="alert('hello world')">hello world</button>
-    <button onclick="document.getElementById('one').innerHTML = 'hello <strong>world document</strong>'">hello world</button>
+    <script>
+        // 한 줄 주석입니다.
+        /* 
+        여
+        러
+        줄
+        
+        주
+        석
+        입
+        니
+        다
+        . 
+        */
+    </script>
 </body>
 </html>
