--- a/수업내용/Day22/JavaScript/005_변수출력.html
+++ b/수업내용/Day22/JavaScript/005_변수출력.html
@@ -8,17 +8,13 @@
 </head>
 <body>
     <script>
-        // 주석입니다.
-        /* 
-        주
-        석
-        입
-        니
-        다
-        . 
-        */
-        // prompt("hello world");
-        confirm("hello");
+        let x = 3;
+        let y = 7;
+        console.log(x + y);
+
+        let 호준 = -100000000000;
+        let π = 100;
+        console.log(π + π);
     </script>
 </body>
 </html>
