--- a/수업내용/Day22/JavaScript/003_버튼_클릭이벤트_출력.html
+++ b/수업내용/Day22/JavaScript/003_버튼_클릭이벤트_출력.html
@@ -7,10 +7,8 @@
     <title>hello javascript</title>
 </head>
 <body>
-    <script>
-        let x = 3;
-        let y = 7;
-        console.log(x + y);
-    </script>
+    <p id="one"></p>
+    <button onclick="alert('hello world')">hello world1</button>
+    <button onclick="document.getElementById('one').innerHTML = 'hello <strong>world document</strong>'">hello world2</button>
 </body>
 </html>
