--- a/수업내용/Day25/016_object.html
+++ b/수업내용/Day25/016_object.html
@@ -19,9 +19,12 @@
     }
     console.log(typeof sum);
     sum.value = 'hojun';
-    console.log(console.dir(sum));
     console.log(sum.value);
-    console.log(typeof sum);
+
+    console.log(console.dir(sum));
+    console.log(console.dir({name:'감자'}));
+
+
   </script>
 </body>
 
