--- a/수업내용/Day25/015_boolean_confuse.html
+++ b/수업내용/Day25/015_boolean_confuse.html
@@ -27,14 +27,14 @@
 
     document.write(`14. ${isNaN(undefined)} <br>`); //true 주의
     document.write(`15. ${isNaN(null)} <br>`); //false 주의
-    document.write(`16. ${isNaN(NaN)} <br><br>`); // 주의
+    document.write(`16. ${isNaN(NaN)} <br><br>`); //true 주의
 
-    document.write(`17. ${Number.isNaN(undefined)} <br>`); //주의
-    document.write(`18. ${Number.isNaN(null)} <br>`); //주의
-    document.write(`19. ${Number.isNaN(NaN)} <br><br>`); //주의
+    document.write(`17. ${Number.isNaN(undefined)} <br>`); //true 주의
+    document.write(`18. ${Number.isNaN(null)} <br>`); //true 주의
+    document.write(`19. ${Number.isNaN(NaN)} <br><br>`); //true 주의
 
-    document.write(`20. ${![]} <br>`); //주의
-    document.write(`21. ${!{}} <br><br>`); //주의
+    document.write(`20. ${![]} <br>`); //false 주의
+    document.write(`21. ${!{}} <br><br>`); //false 주의
 
     if ([]) {
       document.write('hello world1 <br>');
@@ -72,7 +72,6 @@
     console.log(+true);
     console.log(false*1);
     console.log(true*1);
-
   </script>
 </body>
 
